
5.1.2 (2018-02-??)
------------------
- ALL: currency meta informatie wordt nu gebruikt om bestellingen in andere
  currencies te converteren naar euro's. Deze meta info moet nu per webshop nog
  toegevoegd worden.
- ALL: Als de shop standaard currency geen euro is, maar de order wel, en de
  currency meta info is aanwezig, wordt de factuur ook geconverteerd nar euros.
- OC: Ondersteuning voor andere currencies
- PS: Ondersteuning voor andere currencies.
- PS: FatalThrowableError: Access to undeclared static property: Acumulus::$module_version

5.1.1 (2018-02-07)
------------------
- ALL: Ernstige fout in Container bij creatie Communicator object.
- MA: getBillingAddress() kan leeg zijn en tot een warning/foutmelding leiden.
- MA: Ondersteun multi-currency door alleen nog maar de Base velden te gebruiken.

5.1.0 (2018-02-07)
------------------
- MA2: Ondersteuning toegevoegd voor betaalkosten via de paycheckout en sisow
  betaalproviders.
- WC: Moved support for other plugins to a separate class.
- ALL: Maak (waar mogelijk) onderscheid tussen 0% btw en btw-vrij.
- ALL: Als een factuur niet verzonden wordt omdat het totaal 0 is, werdt
 'verzenden tegengehouden door het event "AcumulusInvoiceCreated' gelogd.

5.0.5 (2018-01-25)
------------------
- composer.json: Message from packagist: siel/acumulus failed to update, invalid
  composer.json data:  License "GPL-3.0" is a deprecated SPDX license
  identifier, use "GPL-3.0-only" or "GPL-3.0-or-later" instead.
- PSR-1: use true, false and null instead of TRUE, FALSE and NULL.

5.0.4 (2018-01-22)
------------------
- WC: Eigen oplossing voor WooCommerce bug #18357 ging de fout in.

5.0.3 (2018-01-19)
------------------
- ALL: Backslashes worden niet goed verstuurd naar Acumulus waardoor met name
  Nieuwe regels en tabs niet werken in de velden beschrijving en notities.
- WC: Oude folder libraries was nog niet verwijderd uit svn.

5.0.2 (2018-01-18)
------------------